# Mapanare

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.bootstrap  GOVERNANCE.md  LICENSE  Makefile  README.md  SECURITY.md  dev.ps1  install.ps1  install.sh  mapa.spec  mnc-stage1  prompt.md  pyinstaller-entry.py  pyproject.toml  site_app.py  test_ws_minimal.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  playground.yml  publish.yml  release.yml
.pr/: 2026-04-03-2.md  2026-04-03.md
archive/: README.md
archive/stdlib/: http.py  io.py  log.py  math.py  pkg.py  text.py  time.py
benchmarks/: GPU_REPORT.md  bench_agents.py  bench_compare.py  bench_stdlib.py  bench_streams.py  generate_report.py  isolate.py  results_all.json  results_gpu.json  results_streams.json  run_all.py
benchmarks/cross_language/: 01_fibonacci.go  01_fibonacci.rs  02_concurrency.mn  02_concurrency.rs  03_stream_pipeline.go  03_stream_pipeline.py  03_stream_pipeline.rs  05_agent_pipeline.mn  05_agent_pipeline.py  results.json  run_benchmarks.py
benchmarks/gpu/: _bench_utils.py  _cuda_helpers.py  bench_elementwise.py  bench_matmul.py  bench_reduction.py  bench_transfer.py  run_gpu_benchmarks.py
bootstrap/: Makefile  README.md  ast_nodes.py  cli.py  diagnostics.py  emit_llvm.py  emit_llvm_mir.py  emit_python.py  emit_python_mir.py  jit.py  lexer.py  lower.py  mapanare.lark  mir.py  mir_builder.py  mir_opt.py  modules.py  optimizer.py  parser.py  semantic.py  targets.py  types.py
bootstrap/seed/: README.md
crawl/src/: config.mn  engine.mn  extract.mn  frontier.mn  page.mn  persist.mn  robots.mn  url.mn
docs/: ARCHITECTURE_DECISIONS.md  BOOTSTRAP.md  MEMORY_MODEL.md  MIGRATION_TEMPLATE.md  README.es.md  README.pt.md  README.zh-CN.md  ROADMAP.md  SPEC.md  STABILITY.md  cookbook.md  for-python-devs.md  for-rust-devs.md  for-typescript-devs.md  getting-started.md  manifesto.md  reference.md  stdlib.md
experimental/: __init__.py  model.py  tensor.py
mapa/: cli.py  emit_llvm.py  gpu.py  jit.py  model.py  optimizer.py  parser.py  tensor.py
mapanare/: __init__.py  __main__.py  ast_nodes.py  cli.py  deploy.py  docgen.py  emit_c.py  emit_llvm.py  emit_llvm_mir.py  emit_llvm_text.py  emit_python.py  emit_python_mir.py  emit_wasm.py  error_codes.py  gpu.py  jit.py  linter.py  lower.py  mapanare.lark  metrics.py  migrate.py  mir.py  mir_opt.py  model.py  modules.py  multi_module.py  optimizer.py  parser.py  semantic.py  targets.py  test_runner.py  tracing.py  types.py  wasm_linker.py
packaging/: install.ps1  install.sh  mapanare.spec  pyinstaller-entry.py
playground/: index.html  package-lock.json  package.json  vite.config.js
rfcs/: 0001-agent-syntax.md
runtime/: __init__.py  agent.py  deploy.py  io_bridge.py  native_bridge.py  result.py  signal.py  stream.py
scripts/: build_from_seed.sh  build_stage1.py  concat_self.py  concat_self.sh  fix_ssa.py  fix_stage2_ir.py  fix_stage2_phis.py  ir_doctor.py  mir_trace.py  rebuild.sh  test_native.py  test_runtime.sh  verify_fixed_point.sh
stdlib/: __init__.py  crypto.mn  fs.mn  log.mn  math.mn  pkg.py  time.mn
test_vs/: 01_fibonacci.mn  01_fibonacci.py  02_concurrency.go  02_concurrency.mn  02_concurrency.py  03_stream_pipeline.mn  04_matrix_mul.go  04_matrix_mul.mn  04_matrix_mul.py  04_matrix_mul.rs  05_agent_pipeline.go  05_agent_pipeline.rs  results.json  run_benchmarks.py
tests/: __init__.py  test_changelog.py  test_ci.py  test_doc_links.py  test_examples.py  test_readme.py  test_scope.py  test_spec.py  test_v060_release.py  test_v070_release.py
(+388 files in other folders)
