[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mapanare"
dynamic = ["version"]
description = "Mapanare -- an AI-native compiled programming language"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "lark",
    "llvmlite",
    "pygls>=1.0",
    "lsprotocol",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "mypy",
    "black>=26.3",
    "ruff",
    "pyinstaller",
    "pyyaml",
]

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools.packages.find]
include = ["mapanare*", "runtime*", "stdlib*", "editors*"]

[project.scripts]
mapanare = "mapanare.cli:main"
mapa = "mapanare.cli:main"
mapanare-lsp = "mapanare.lsp.server:main"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
"site_app.py" = ["E501"]
"benchmarks/cross_language/run_benchmarks.py" = ["E741"]

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
