[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mapanare"
dynamic = ["version"]
description = "Mapanare -- an AI-native compiled programming language"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "lark",
    "pygls>=1.0",
    "lsprotocol",
]

[project.optional-dependencies]
llvm = [
    "llvmlite",
]
dev = [
    "llvmlite",
    "pytest",
    "pytest-asyncio",
    "pytest-xdist",
    "mypy",
    "black>=26.3",
    "ruff",
    "pyinstaller",
    "pyyaml",
]

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools.packages.find]
include = ["mapanare*", "runtime*", "stdlib*", "editors*"]

[project.scripts]
mapanare = "mapanare.cli:main"
mapa = "mapanare.cli:main"
mapanare-lsp = "mapanare.lsp.server:main"

[tool.black]
line-length = 100
extend-exclude = "bootstrap"

[tool.ruff]
line-length = 100
exclude = ["bootstrap"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
"site_app.py" = ["E501"]
"benchmarks/cross_language/run_benchmarks.py" = ["E741"]
"tests/stdlib/*.py" = ["E501"]
"scripts/fix_stage2_phis.py" = ["E501"]
"scripts/ir_doctor.py" = ["E501", "E741", "F841"]

[tool.mypy]
strict = true
ignore_missing_imports = true
exclude = ["bootstrap"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
